[package]
name = "pandemist_vehicle_elements"
version = "0.1.0"
authors = ["pandemist.daniel@gmail.com"]
edition = "2021"
description = "A library with helpful structures for developing Lotus projects."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Pandemist/PandemistVehicleElements"
homepage = "https://github.com/Pandemist/PandemistVehicleElements"
documentation = "https://docs.rs/PandemistVehicleElements"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lotus-extra = { git = "https://github.com/Oriolus-Software/lotus-extra.git", branch = "master" }
lotus-script = { git = "https://github.com/Oriolus-Software/LOTUS-Scripting.git", version = "0.6.2", features = [
	"time",
] }
#lotus-script = "0.6.2"

#lotus-script = "0.6"
typedmap = "0.6.0"
serde = "1"
serde_json = "1"
time = { version = "0.3", features = ["serde"] }
static-toml = "1.0"
