[package]
name = "pandemist_vehicle_elements"
version = "0.1.0"
authors = ["pandemist.daniel@gmail.com"]
edition = "2021"
description = "A library with helpful structures for developing Lotus projects."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Pandemist/PandemistVehicleElements"
homepage = "https://github.com/Pandemist/PandemistVehicleElements"
documentation = "https://docs.rs/PandemistVehicleElements"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lotus-extra = "0.2"
lotus-script = { version = "0.7", features = ["time"] }
#lotus-extra = { git = "https://github.com/Oriolus-Software/lotus-extra.git" }
#lotus-script = { git = "https://github.com/Oriolus-Software/LOTUS-Scripting.git", features = [
#	"time",
#] }
typedmap = "0.6.0"
serde = "1"
serde_json = "1"
time = { version = "0.3", features = ["serde"] }
static-toml = "1.0"

# [patch.crates-io]
# lotus-shared = { git = "https://github.com/Oriolus-Software/LOTUS-Scripting.git" }
# lotus-script-sys = { git = "https://github.com/Oriolus-Software/LOTUS-Scripting.git" }
# lotus-extra = { git = "https://github.com/Oriolus-Software/lotus-extra.git" }
